[package]
name = "esusux"
version = "0.1.0"
description = "Decentralized rotating savings circles on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "esusux"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2" }
